[gd_scene load_steps=11 format=3 uid="uid://bge3w1250yufh"]

[ext_resource type="Script" path="res://scripts/tower_cannon.gd" id="1_1rc2c"]
[ext_resource type="PackedScene" uid="uid://thkyltf0muwt" path="res://scenes/cannonball.tscn" id="2_5vff5"]
[ext_resource type="Texture2D" uid="uid://dwgtx8k46gxxf" path="res://assets/Cannon_Tower.png" id="3_d7mga"]
[ext_resource type="Texture2D" uid="uid://ci10w7252lc30" path="res://assets/Cannon.png" id="4_o8ruf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_nc86y"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_l0fhu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_qaark"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_2cl75"]
[ext_resource type="AudioStream" uid="uid://bsyfuvqjchls7" path="res://audio/cannon.mp3" id="8_pcsjg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqvlc"]
radius = 140.0

[node name="cannon_tower" type="Node2D"]
script = ExtResource("1_1rc2c")
projectile_type = ExtResource("2_5vff5")

[node name="Base" type="Node2D" parent="."]

[node name="Cannon Tower" type="Sprite2D" parent="Base"]
texture = ExtResource("3_d7mga")

[node name="Shooter" type="Node2D" parent="."]
rotation = -1.5708

[node name="Cannon" type="Sprite2D" parent="Shooter"]
z_index = 1
rotation = 1.5708
texture = ExtResource("4_o8ruf")
offset = Vector2(0, -10)

[node name="projectile_spawn" type="Node2D" parent="Shooter"]
position = Vector2(30, 0)

[node name="PatrolZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PatrolZone"]
shape = SubResource("CircleShape2D_aqvlc")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_nc86y")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("6_l0fhu")
initial_state = NodePath("Patrolling")

[node name="Patrolling" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_qaark")

[node name="AcquiringState" type="Node" parent="StateChart/CompoundState/Patrolling"]
script = ExtResource("8_2cl75")
to = NodePath("../../Acquiring")
event = &"to_acquiring"

[node name="Acquiring" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_qaark")

[node name="AttackingState" type="Node" parent="StateChart/CompoundState/Acquiring"]
script = ExtResource("8_2cl75")
to = NodePath("../../Attacking")
event = &"to_attacking"

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState/Acquiring"]
script = ExtResource("8_2cl75")
to = NodePath("../../Patrolling")
event = &"to_patrolling"

[node name="Attacking" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_qaark")

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState/Attacking"]
script = ExtResource("8_2cl75")
to = NodePath("../../Patrolling")
event = &"to_patrolling"

[node name="CannonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pcsjg")
volume_db = -21.0
bus = &"fx"

[connection signal="area_entered" from="PatrolZone" to="." method="_on_patrol_zone_area_entered"]
[connection signal="area_exited" from="PatrolZone" to="." method="_on_patrol_zone_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Patrolling" to="." method="_on_patrolling_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
